<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/study_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/study_reset"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@mipmap/reset"
            android:contentDescription="@string/img_reset" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tv_today"
                    android:layout_marginStart="15dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"/>

                <TextView
                    android:id="@+id/tv_cardRep_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5个"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="2dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tv_cardRes"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/home_tv_all"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"/>

                <TextView
                    android:id="@+id/tv_card_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tv_amount"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="2dp"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tv_wait"
                    android:textSize="15sp"
                    android:textColor="@color/colorText"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_wait"
                android:textSize="21sp"
                android:layout_marginStart="20dp"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:clipChildren="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/wait_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/all"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/img_see_more" />
                    </RelativeLayout>


                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/vp_study"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="80dp"
                        android:clipChildren="false" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_studied"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_day_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_day_amount"
                            android:textStyle="bold"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="3dp"
                            android:textSize="22sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_day"
                            android:textSize="16sp"/>

                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_btn"
                        android:text="@string/start_study"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal"
                        android:elevation="20dp"
                        android:outlineAmbientShadowColor="@color/colorPrimary"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>




            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_study"
                android:textSize="21sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clipChildren="false"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp">


                <include layout="@layout/include_study"/>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_recommend"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/img_see_more"
                    android:src="@mipmap/all" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:clipChildren="false"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>